Bug #43483
mds: reject forward scrubs when cluster has multiple active MDS (more than one rank)
% Done:
0%
Source:
Development
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
multimds
Pull request ID:
Crash signature:
Description
Forward scrub may cause the MDS to hit various assertions if there is more than one rank. Have the MDS check if there is more than one rank before initiating a scrub.
There were efforts in #12274 to support scrub with more than one rank but that work is currently tabled. It does need resumed however!
Related issues
History
#1 Updated by Patrick Donnelly about 1 year ago
- Related to Feature #12274: mds: start forward scrubs from all subtree roots, skip non-auth metadata added
#2 Updated by Milind Changire about 1 year ago
- Status changed from New to In Progress
- Pull request ID set to 32521
#3 Updated by Patrick Donnelly about 1 year ago
- Status changed from In Progress to Pending Backport
#4 Updated by Patrick Donnelly about 1 year ago
- Copied to Backport #43558: nautilus: mds: reject forward scrubs when cluster has multiple active MDS (more than one rank) added
#5 Updated by Patrick Donnelly about 1 year ago
- Copied to Backport #43559: mimic: mds: reject forward scrubs when cluster has multiple active MDS (more than one rank) added
#6 Updated by Nathan Cutler 9 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".